# mcp-image-recognition-py

./: .env.example  README.md  README_CN.md  image_processing.py  pyproject.toml  requirements.txt  server.py  setup.bat  setup.sh
