[project]
name = "mcp-image-recognition"
version = "0.1.0"
description = "MCP Server for Image Recognition using Gemini, OpenAI, and other LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-image-recognition = "server:main"
